<resources>
    <string name="app_name">IOTApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="outside_moisture">Outside Moisture</string>
    <string name="temperature">Temperature</string>
    <string name="dirt_moisture">Rain Status</string>
    <string name="connect">Connect</string>
    <string name="pumper_status">Pumper Status</string>
    <string name="pumper_alarm">Pumper Alarm</string>
    <string name="pump_now">Pump now</string>
    <string name="online">Online</string>
    <string name="offline_label">Offline</string>
    <string name="adjust_for_automatic_pumper">Adjust for automatic pumper</string>
    <string name="save">Save</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="language">Language</string>
    <string name="english_label">English</string>
    <string name="vietnamese_label">Vietnamese</string>
    <string name="celsius_label">Celsius (°C)</string>
    <string name="fahrenheit_label">Fahrenheit (°F)</string>
    <string name="status_on">ON</string>
    <string name="status_off">OFF</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="invalid_time_message">Please enter date/time in correct format</string>
    <string name="invalid_time_hint">Invalid format</string>
    <string name="past_time_error">Time cannot be in the past</string>
    <string name="no_schedule">No schedule</string>
    <string name="log_out">Log out</string>
    <string name="chatbot">Chatbot</string>
    <string name="text">Text</string>
    <string name="send">Send</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="file">File</string>
    <string name="back">Back</string>
    <string name="sending">Sending...</string>
    <string name="error_sending_message">Error sending message</string>
    <string name="thinking">Thinking...</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Continue">Continue</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="forget_password">Forget password ?</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="check_your_inbox">Check your inbox</string>
    <string name="a_password_reset_link_has_been_sent_to_your_email_please_check_your_inbox_and_spam_folder">A password reset link has been sent\n to your email. Please check your inbox \n(and spam folder).</string>
    <string name="hi">Hi</string>
</resources>