<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="24dp"
    tools:context=".ui.auth.SetPasswordFragment">


    <ImageView
        android:id="@+id/icOk"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintWidth_percent="0.4"
        android:src="@drawable/ok_icon"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <TextView
        android:id="@+id/titleCheckyourInbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="5"
        android:letterSpacing="0.02"
        android:layout_marginTop="60dp"
        android:paddingLeft="10dp"
        android:fontFamily="@font/freeman_regular"
        android:text="@string/check_your_inbox"
        app:layout_constraintTop_toBottomOf="@id/icOk"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/titleNotifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="5"
        android:letterSpacing="0.02"
        android:alpha="0.6"
        android:paddingLeft="10dp"
        android:fontFamily="@font/freeman_regular"
        android:text="@string/a_password_reset_link_has_been_sent_to_your_email_please_check_your_inbox_and_spam_folder"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/titleCheckyourInbox"
        />

    <!-- Continue Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/Continue"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/primary_blue"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleNotifi" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnContinue" />


</androidx.constraintlayout.widget.ConstraintLayout>












