<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_info">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/freeman_regular"
        android:text="Hi, Thanh"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_white_12"
        app:layout_constraintDimensionRatio="374:121"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintWidth_percent="0.9" />

    <ImageView
        android:id="@+id/icLanguage"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_language"
        app:layout_constraintBottom_toBottomOf="@id/liner1"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view" />

    <ImageView
        android:id="@+id/icTemperatureMeter"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_dirt_moisture"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toBottomOf="@id/liner1" />

    <TextView
        android:id="@+id/tvLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/freeman_regular"
        android:text="@string/language"
        android:textColor="@color/color_447661"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/icLanguage"
        app:layout_constraintStart_toEndOf="@id/icLanguage"
        app:layout_constraintTop_toTopOf="@id/icLanguage"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/tvTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/freeman_regular"
        android:text="@string/temperature"
        android:textColor="@color/color_447661"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/icTemperatureMeter"
        app:layout_constraintStart_toEndOf="@id/icTemperatureMeter"
        app:layout_constraintTop_toTopOf="@id/icTemperatureMeter"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/tvLanguageReal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/freeman_regular"
        android:text="English"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/icMore"
        app:layout_constraintEnd_toStartOf="@id/icMore"
        app:layout_constraintTop_toTopOf="@id/icMore"/>

    <TextView
        android:id="@+id/tvTemperatureReal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/freeman_regular"
        android:text="Celcius"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/icMore2"
        app:layout_constraintEnd_toStartOf="@id/icMore2"
        app:layout_constraintTop_toTopOf="@id/icMore2" />

    <ImageView
        android:id="@+id/icMore"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_more"
        app:layout_constraintBottom_toTopOf="@id/liner1"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view" />

    <ImageView
        android:id="@+id/icMore2"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_more"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintTop_toBottomOf="@id/liner1"/>

    <View
        android:id="@+id/liner1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintHeight_percent="0.002"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintWidth_percent="0.8" />

    <View
        android:id="@+id/view7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_6adf9b_12"
        app:layout_constraintDimensionRatio="133:47"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/logOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/freeman_regular"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/view7"
        app:layout_constraintEnd_toEndOf="@id/view7"
        app:layout_constraintStart_toStartOf="@id/view7"
        app:layout_constraintTop_toTopOf="@id/view7" />


</androidx.constraintlayout.widget.ConstraintLayout>











